# My_Basket

./:  My_Basket.drawio  .gitignore  CMakeLists.txt  My_Basket.xml  README.md  main.cpp  recipes.drawio
GUI/: additional_windows.cpp  additional_windows.h  its_qmake_pro_file.h  main_gui.cpp  recipe_book.cpp  recipe_book.h  recipebook.cpp  recipebook.h  recipebook.ui  style_settings.h
Logs/: logs_by_Fri_May_28_00_01_40_2021  logs_by_Fri_May_28_00_02_04_2021  logs_by_Fri_May_28_00_02_33_2021  logs_by_Fri_May_28_00_27_12_2021  logs_by_Fri_May_28_00_33_13_2021  logs_by_Fri_May_28_00_36_57_2021  logs_by_Fri_May_28_00_39_07_2021  logs_by_Fri_May_28_00_39_36_2021  logs_by_Fri_May_28_00_40_04_2021  logs_by_Fri_May_28_00_42_45_2021  logs_by_Fri_May_28_00_43_13_2021  logs_by_Fri_May_28_00_43_39_2021
data/: av.json  karusel1.json  karusel2.json  recipes.json  spar.json
data_original/: recipes.json
include/: API.h  algo.h  doctest.h  errors.h  for_static.h  logger.h  mainwindow.h  search_engine.h  startwindow.h  view.h  work_with_string.h
server/: server.cpp  server.h
src/: API.cpp  algo.cpp  console_finder.cpp  errors.cpp  logger.cpp  main.cpp  mainwindow.cpp  search_engine.cpp  startwindow.cpp  view.cpp  work_with_string.cpp
tests/: test_algo.cpp  test_mainwindow.cpp  test_mainwindow.h  test_search_engine.cpp  test_work_with_string.cpp
utility/: CMakeLists.txt  json_utility.cpp  json_utility.h
